# rs_pvw

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: configuration.rs  database.rs  main.rs  settings.glade  slider.glade
