[package]
name = "rs_pvw"
version = "0.1.0"
authors = ["chprat <49040338+chprat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.1"
rust-ini = "0.15.2"
rusqlite = "0.21.0"
gdk-pixbuf = "0.8.0"
gdk = "0.12.1"
