[package]
name = "rs_pvw"
version = "0.1.0"
authors = ["chprat <49040338+chprat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.0"
rust-ini = "0.15.3"
rusqlite = "0.23.1"
gdk-pixbuf = "0.9.0"
gdk = "0.13.0"
timer = "0.2.0"
chrono = "0.4.13"
glib = "0.10.1"
walkdir = "2.3.1"
